--- a/index.html
+++ b/index.html
@@ -13,13 +13,46 @@
     </style>
 </head>
 <body bgcolor="#f2f2f2">
-    <table bgcolor="#ffffff" style="margin: 0 auto;" width="650" align="center">
-        <tbody>
+    <table bgcolor="#ffffff" style="margin: 0 auto;" width="650" align="center" cellspacing="0">
+        <tbody align="center">
+            <!-- top logo -->
             <tr>
-                <td>
-                    <h1>hi</h1>
+                <td bgcolor="#2b2c2c">
+                    <table cellspacing="0" cellpadding="0">
+                        <tbody>
+                            <tr>
+                                <td height="20" style="height: 20px;"></td>
+                            </tr>
+                            <tr>
+                                <td align="center" width="100%">
+                                    <img src="./assets/img-top.png" alt="automative">
+                                </td> 
+                            </tr>
+                            <tr>
+                                <td height="20" style="height: 20px;"></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </td>
             </tr>
+            <!-- link section -->
+             <tr>
+                <td bgcolor="#E2E3E3" cellspacing="0" cellpadding="0">
+                    <table cellspacing="0" cellpadding="0">
+                        <tbody>
+                            <tr>
+                                <td height="10"></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td height="10"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+             </tr>
         </tbody>
     </table>
 </body>
